--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -5,7 +5,8 @@ html
     block title
       title Default title
       link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" ntegrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
+      link(rel="stylesheet", href="/css/styles.css")
   body
-    nav.navbar.navbar-dark.bg-dark
-      .container 
+    nav#navegacion.navbar.navbar-dark.bg-dark
+
     block content
