--- a/app/views/registrer.pug
+++ b/app/views/registrer.pug
@@ -8,7 +8,7 @@ block content
           form(action="/registrer", method="post") 
             .mb-3 
                 label.form-label(for="Username") Username: 
-                input.form-control(type="text", id="name", name="name",placeholder="user")
+                input.form-control(type="text", id="username", name="username",placeholder="user")
             .mb-3 
                 label.form-label(for="password") Password:
                 input.form-control(type="password", id="password", name="password",password="passowrd", placeholder="*********")  
