--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -7,6 +7,27 @@ html
       link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" ntegrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
       link(rel="stylesheet", href="/css/styles.css")
   body
-    nav#navegacion.navbar.navbar-dark.bg-dark
+    nav#navegacion.navbar.navbar-expand-lg.navbar-dark.bg-dark.p-0
+      .container-fluid
+        a.navbar-brand(href='/chat/list') node chat
+        if user
+          button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation')
+            span.navbar-toggler-icon
+          
+          #navbarNav.collapse.navbar-collapse
+            ul.navbar-nav.me-5
+              li.nav-item
+                a.nav-link.active(aria-current='page' href='#') Chat 
+              li.nav-item
+                a.nav-link.active(aria-current='page' href='#') Historial                     
+          #navbarNav.collapse.navbar-collapse.justify-content-end
+            ul.navbar-nav.me-5
+              li.nav-item
+                a.nav-link.active(aria-current='page' href='#') log out
+  
+
 
     block content
+
+    script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js", integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB", crossorigin="anonymous") 
+    script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js", integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13", crossorigin="anonymous") 
