--- a/app/views/listChat.pug
+++ b/app/views/listChat.pug
@@ -5,13 +5,13 @@ block content
         .card 
             .card-body 
                 h3.card-title.text-center selecciona la sala de chat 
-                form(action="/chat/view", method="get", id="form").d-flex.flex-column
-                    .form-check
-                        input.form-check-input.check(type="radio", name="chat", id="chat", value="chat1")
-                        label(for="chat1") Chat 1 
-                    .form-check.justify-content-center 
-                        input.form-check-input.check(type="radio", name="chat", id="chat", value="chat2")
-                        label(for="chat2") Chat 2
+                form(action="/chat/view", method="post", id="form").d-flex.flex-column
+                    input(type="hidden", name="sala", id="sala", value="funciona")
+                    - let salas = [1,2,3,4];
+                    each sala in salas
+                        .form-check.mt-3
+                            input.form-check-input.check(type="radio", name="chat", id="chat", value="chat"+sala)
+                            label.nombreSala(for="chat" + sala)= "chat" + sala                     
                     .mt-3 
                         input(type="submit", value="entrar a sala").btn.btn-primary 
     script(src="/js/listChat.js")  
