--- a/app/views/salaChat.pug
+++ b/app/views/salaChat.pug
@@ -10,10 +10,11 @@ block content
                     .card-body 
                 .mt-3.row
                     .col-sm-10
-                        input.form-control.divInputTexto(type="text", name="mensaje", placeholder="escribe tu mensaje aqui")
+                        input.form-control.divInputTexto(type="text", name="mensaje", id="mensaje", placeholder="escribe tu mensaje aqui")
                     .col-auto
-                        input.btn.btn-primary(type="button", value="enviar")
+                        input.btn.btn-primary(type="button", value="enviar", id="botonChat")
             #usuarios.card 
-                .card-body 
+                .card-body
+    script(src="/js/chat.js")  
 
                 
