terminado el guardar en la base de datos los mensajes

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -23,7 +23,7 @@ html
           #navbarNav.collapse.navbar-collapse.justify-content-end
             ul.navbar-nav.me-5
               li.nav-item
-                a.nav-link.active(aria-current='page' href='#') log out
+                a.nav-link.active(aria-current='page' href='/logout') log out
   
 
 
