--- a/app/views/salaChat.pug
+++ b/app/views/salaChat.pug
@@ -1,13 +1,22 @@
 extends ./layout
 
 block content
+    input(type="hidden", name="sala",id="sala",value=nombreSala)
     .container-fluid.mt-5
+        p=user.userName
         .container-fluid.ms-5
             h2= "sala de " + nombreSala
         .container-fluid.d-flex.justify-content-evenly.flex-wrap 
             #menuChat 
                 .card#textoChat 
-                    .card-body 
+                    .card-body
+                        each mensaje, index in mensajes 
+                            - let isUser = user.userName == mensaje.author;
+                            - let fecha = mensaje.create_at.toLocaleDateString() + " " + mensaje.create_at.toLocaleTimeString();
+                            if isUser
+                                p.text-end= mensaje.author +  " [" + fecha +  "] " + mensaje.mensaje
+                            else 
+                                p.text-start= mensaje.author + " [" + fecha +  "] " + mensaje.mensaje
                 .mt-3.row
                     .col-sm-10
                         input.form-control.divInputTexto(type="text", name="mensaje", id="mensaje", placeholder="escribe tu mensaje aqui")
