listo socket io de usuarios registrados

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -31,3 +31,21 @@
     width: 100%;
 }
 
+
+#chatText {
+    overflow: scroll;
+}
+
+.textUser {
+    width: 80%;
+    display: block;
+    padding-left: 40%;
+    width: 100%;
+}
+
+.textOtro {
+    width: 80%;
+    display: block;
+    padding-right: 40%;
+    width: 100%;
+}
