comenzado el historial faltaria el boton de borrar

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -17,9 +17,9 @@ html
           #navbarNav.collapse.navbar-collapse
             ul.navbar-nav.me-5
               li.nav-item
-                a.nav-link.active(aria-current='page' href='#') Chat 
+                a.nav-link.active(aria-current='page' href='/chat/list') Chat 
               li.nav-item
-                a.nav-link.active(aria-current='page' href='#') Historial                     
+                a.nav-link.active(aria-current='page' href='/history/list') Historial                     
           #navbarNav.collapse.navbar-collapse.justify-content-end
             ul.navbar-nav.me-5
               li.nav-item
